refactor: S3 첨부파일 저장 및 뉴스이벤트 썸네일 삭제 누락 문제 수정 (#69)